# internal/module/role/controller.go
@@ -2,6 +2,7 @@ package role
 
 import (
 	"dev-go-apis/internal/lib"
+	"dev-go-apis/internal/middleware"
 	"dev-go-apis/internal/models"
 	"net/http"
 
@@ -28,6 +29,7 @@ func NewRoleController(roleService IRoleService) *RoleController {
 
 func (contl *RoleController) RegisterRoutes(rg *gin.RouterGroup) {
 	roleGroup := rg.Group("/roles")
+	roleGroup.Use(middleware.AccessTokenHandler())
 	roleGroup.GET("/", contl.GetRolePermissionsList)
 	roleGroup.POST("/", contl.CreateRole)
 	roleGroup.PUT("/", contl.UpdateRolePermissions)
@@ -47,6 +49,7 @@ func (contl *RoleController) RegisterRoutes(rg *gin.RouterGroup) {
 //	@Failure		400		{object}	models.APIResponse
 //	@Failure		500		{object}	models.APIResponse
 //	@Router			/roles [delete]
+//	@Security		Bearer
 func (contl *RoleController) DeleteRolePermissions(ctx *gin.Context) {
 	var req models.DeleteRolePermissionsRequest
 
@@ -75,6 +78,7 @@ func (contl *RoleController) DeleteRolePermissions(ctx *gin.Context) {
 //	@Failure	400		{object}	models.APIResponse
 //	@Failure	500		{object}	models.APIResponse
 //	@Router		/roles [put]
+//	@Security	Bearer
 func (contl *RoleController) UpdateRolePermissions(ctx *gin.Context) {
 	var req models.UpdateRolePermissionsRequest
 
@@ -103,6 +107,7 @@ func (contl *RoleController) UpdateRolePermissions(ctx *gin.Context) {
 //	@Failure	400	{object}	models.APIResponse
 //	@Failure	500	{object}	models.APIResponse
 //	@Router		/roles/{id} [get]
+//	@Security	Bearer
 func (contl *RoleController) GetRolePermissionsById(ctx *gin.Context) {
 	var req models.GetRolePermissionsByIdRequest
 
@@ -129,6 +134,7 @@ func (contl *RoleController) GetRolePermissionsById(ctx *gin.Context) {
 //	@Failure	400	{object}	models.APIResponse
 //	@Failure	500	{object}	models.APIResponse
 //	@Router		/roles [get]
+//	@Security	Bearer
 func (contl *RoleController) GetRolePermissionsList(ctx *gin.Context) {
 	roleList, err := contl.RoleService.GetRolePermissionsList()
 	if err != nil {
@@ -152,6 +158,7 @@ func (contl *RoleController) GetRolePermissionsList(ctx *gin.Context) {
 //	@Failure	400		{object}	models.APIResponse
 //	@Failure	500		{object}	models.APIResponse
 //	@Router		/roles [post]
+//	@Security	Bearer
 func (contl *RoleController) CreateRole(ctx *gin.Context) {
 	var req models.CreateRoleRequest
 
